Allowed editing of closed/disposed specimens. That is, following is allowed on closed/disposed specimens: a) Editing of specimen attributes b) Add/edit specimen custom forms c) Add/edit specimen events d) Printing of labels
However, following is not allowed on disposed specimens:
a) Storing
b) Distribution
c) Shipment
d) Creating derivative and aliquots
e) Creating pooled specimen